--- a/style.css
+++ b/style.css
@@ -4,6 +4,11 @@
     box-sizing: border-box;
     font-family: 'Josefin Sans', sans-serif;
 }
+.header{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 
 .cart{
     position: fixed;
